fixed whitespace

--- a/src/components/characters/CharacterList.css
+++ b/src/components/characters/CharacterList.css
@@ -3,11 +3,9 @@
   grid-template-columns: repeat(3, 1fr);
   width: 100%;
   margin: 10px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  
-  
-  
+  font-family:fantasy;
 }
+
 .item{
   padding: 0 10px;
   list-style: none;
